add project retrieval endpoint (#6)
